# drone_scheduling_rules

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/drone_scheduling_rules/: __init__.py.py  __version__.py.py  rules.py.py
