[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-scheduling-rules"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
description = "A comprehensive library of constraint rules for drone scheduling optimization"
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords = ["drone", "scheduling", "constraint", "optimization", "rules"]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
  "geopy>=2.3.0",
  "numpy>=1.21.0",
]