[metadata]
license_files = LICENSE
home-page = https://github.com/Cmmmmmmmmm/drone_scheduling_rules
author = C M
author_email =1019606104@qq.com
description = A comprehensive library of constraint rules for drone scheduling optimizatio
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    geopy>=2.3.0
    numpy>=1.21.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    twine>=4.0
    build>=0.10.0
test =
    pytest>=7.0